bundled_metadata/force-app/main/default/objects/KPI__c/KPI__c.object-meta.xml
<CustomObject>
    <label>KPI</label>
    <nameField>
        <label>KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>