bundled_metadata/force-app/main/default/objects/KPI__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KPIs</relationshipLabel>
    <relationshipName>KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>