bundled_metadata/force-app/main/default/objects/KPI__c/fields/Delete_Flag__c.field-meta.xml
<CustomField>
    <fullName>Delete_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when the KPI is no longer being calculated in EDF</description>
    <label>Delete Flag</label>
    <type>Checkbox</type>
</CustomField>