bundled_metadata/force-app/main/default/objects/KPI__c/fields/Denominator_Value__c.field-meta.xml
<CustomField>
    <fullName>Denominator_Value__c</fullName>
    <label>DenominatorValue</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>