bundled_metadata/force-app/main/default/objects/KPI__c/fields/KPI_Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>KPI_Calculation_Date__c</fullName>
    <label>KPICalculationDate</label>
    <type>Date</type>
</CustomField>