bundled_metadata/force-app/main/default/objects/KPI__c/fields/KPI_Target_Variance__c.field-meta.xml
<CustomField>
    <fullName>KPI_Target_Variance__c</fullName>
    <formula>MAX(
  0,
  BLANKVALUE(Target_Value__c, 0) - BLANKVALUE(Actual_Value__c, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Target Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>