bundled_metadata/force-app/main/default/objects/KPI__c/fields/Modification_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Modification_Time_Stamp__c</fullName>
    <label>ModificationTimeStamp</label>
    <type>DateTime</type>
</CustomField>