bundled_metadata/force-app/main/default/objects/KPI__c/fields/Route_Sales_Geo__c.field-meta.xml
<CustomField>
    <fullName>Route_Sales_Geo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Sales Geo</label>
    <referenceTo>Route_Sales_Geo__c</referenceTo>
    <relationshipLabel>KPIs</relationshipLabel>
    <relationshipName>KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>