bundled_metadata/force-app/main/default/objects/KPI__c/fields/Scoring_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Opportunity__c</fullName>
    <label>ScoringOportunity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>