bundled_metadata/force-app/main/default/objects/KPI__c/fields/Target_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Target_Compliance__c</fullName>
    <label>TargetCompliance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>