bundled_metadata/force-app/main/default/objects/KPI__c/validationRules/ScoringOppMustHavePositiveValue.validationRule-meta.xml
<ValidationRule>
    <fullName>ScoringOppMustHavePositiveValue</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Scoring_Opportunity__c) || Scoring_Opportunity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Scoring_Opportunity__c</errorDisplayField>
    <errorMessage>Scoring Opportunity cannot be empty and must have a value of 0 or greater.</errorMessage>
</ValidationRule>